# fgaa-poc

./: README.md  cookiecutter.json
fga-pocc/: pyproject.toml  setup.py
{{ cookiecutter.repo_name }}/Terraform/: main.tf
{{ cookiecutter.repo_name }}/src/: cli.py
